--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6"
   }
 }
