--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "razorpay": "^2.9.6"
   }
 }
